fix responsive layout bug

--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -184,7 +184,12 @@ a:focus {
 }
 
 img.hero {
+    width: 100%;
+    height: auto;
+}
+@media(min-width:767px) {
     margin: 50px;
+    width: auto;
 }
 
 @-webkit-keyframes pulse {    
